--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+@font-face {
+    font-family: 'Monument Regular';
+    src: url('./fonts/MonumentExtended-Regular.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'Monument Ultrabold';
+    src: url('./fonts/MonumentExtended-Ultrabold.otf') format('opentype');
+}
+
 html,body{
     width:100%;
     height:100%;
@@ -41,7 +51,7 @@ html,body{
 #nav1 h4{
     font-size: 10px;
     font-weight: 100px;
-    font-family: monument;
+    font-family: 'Monument Regular';
     cursor: pointer;
  
 }
@@ -78,7 +88,7 @@ html,body{
     background-color: transparent;
     color:black;
     border:none;
-    font-family: monument;
+    font-family: 'Monument Regular';
     font-weight: 300;
     font-size: 11px;
     cursor: pointer;
@@ -117,7 +127,7 @@ html,body{
 
 #content1 h1{
     text-align: center;
-    font-family: monument;
+    font-family: 'Monument Ultrabold';
     margin-top: 30px;
     font-size: 40px;
 }
@@ -169,7 +179,7 @@ html,body{
 } 
 
 #content2 #cinematic #video #overlay h3{
-    font-family: monument;
+    font-family: 'Monument Regular';
     font-size: 30px;
     color:white;
     font-weight: 700;
@@ -223,7 +233,7 @@ html,body{
 }
 
 #elem #over h3{
-    font-family: monument;
+    font-family: 'Monument Regular';
     padding:10px;
     color:white;
     
@@ -239,8 +249,10 @@ html,body{
     width:100%;
     height:100%;
     object-fit: cover;
-    object-position: 70% 70%;
+    object-position: 55% 70%;
 }
+
+
 
 
 @keyframes move{
